qt6/gen_qjsonvalue.nim

import Qt6Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6Widgets")
{.compile("gen_qjsonvalue.cpp", cflags).}


type QJsonValueType* = cint
const
  QJsonValueNull* = 0
  QJsonValueBool* = 1
  QJsonValueDouble* = 2
  QJsonValueString* = 3
  QJsonValueArray* = 4
  QJsonValueObject* = 5
  QJsonValueUndefined* = 128



import gen_qjsonvalue_types
export gen_qjsonvalue_types

import
  gen_qjsonarray,
  gen_qjsonobject,
  gen_qvariant
export
  gen_qjsonarray,
  gen_qjsonobject,
  gen_qvariant

type cQJsonValue*{.exportc: "QJsonValue", incompleteStruct.} = object
type cQJsonValueConstRef*{.exportc: "QJsonValueConstRef", incompleteStruct.} = object
type cQJsonValueRef*{.exportc: "QJsonValueRef", incompleteStruct.} = object

proc fcQJsonValue_new(): ptr cQJsonValue {.importc: "QJsonValue_new".}
proc fcQJsonValue_new2(b: bool): ptr cQJsonValue {.importc: "QJsonValue_new2".}
proc fcQJsonValue_new3(n: float64): ptr cQJsonValue {.importc: "QJsonValue_new3".}
proc fcQJsonValue_new4(n: cint): ptr cQJsonValue {.importc: "QJsonValue_new4".}
proc fcQJsonValue_new5(v: clonglong): ptr cQJsonValue {.importc: "QJsonValue_new5".}
proc fcQJsonValue_new6(s: struct_miqt_string): ptr cQJsonValue {.importc: "QJsonValue_new6".}
proc fcQJsonValue_new7(s: cstring): ptr cQJsonValue {.importc: "QJsonValue_new7".}
proc fcQJsonValue_new8(a: pointer): ptr cQJsonValue {.importc: "QJsonValue_new8".}
proc fcQJsonValue_new9(o: pointer): ptr cQJsonValue {.importc: "QJsonValue_new9".}
proc fcQJsonValue_new10(other: pointer): ptr cQJsonValue {.importc: "QJsonValue_new10".}
proc fcQJsonValue_new11(param1: cint): ptr cQJsonValue {.importc: "QJsonValue_new11".}
proc fcQJsonValue_operatorAssign(self: pointer, other: pointer): void {.importc: "QJsonValue_operatorAssign".}
proc fcQJsonValue_swap(self: pointer, other: pointer): void {.importc: "QJsonValue_swap".}
proc fcQJsonValue_fromVariant(variant: pointer): pointer {.importc: "QJsonValue_fromVariant".}
proc fcQJsonValue_toVariant(self: pointer, ): pointer {.importc: "QJsonValue_toVariant".}
proc fcQJsonValue_typeX(self: pointer, ): cint {.importc: "QJsonValue_type".}
proc fcQJsonValue_isNull(self: pointer, ): bool {.importc: "QJsonValue_isNull".}
proc fcQJsonValue_isBool(self: pointer, ): bool {.importc: "QJsonValue_isBool".}
proc fcQJsonValue_isDouble(self: pointer, ): bool {.importc: "QJsonValue_isDouble".}
proc fcQJsonValue_isString(self: pointer, ): bool {.importc: "QJsonValue_isString".}
proc fcQJsonValue_isArray(self: pointer, ): bool {.importc: "QJsonValue_isArray".}
proc fcQJsonValue_isObject(self: pointer, ): bool {.importc: "QJsonValue_isObject".}
proc fcQJsonValue_isUndefined(self: pointer, ): bool {.importc: "QJsonValue_isUndefined".}
proc fcQJsonValue_toBool(self: pointer, ): bool {.importc: "QJsonValue_toBool".}
proc fcQJsonValue_toInt(self: pointer, ): cint {.importc: "QJsonValue_toInt".}
proc fcQJsonValue_toInteger(self: pointer, ): clonglong {.importc: "QJsonValue_toInteger".}
proc fcQJsonValue_toDouble(self: pointer, ): float64 {.importc: "QJsonValue_toDouble".}
proc fcQJsonValue_toString(self: pointer, ): struct_miqt_string {.importc: "QJsonValue_toString".}
proc fcQJsonValue_toStringWithDefaultValue(self: pointer, defaultValue: struct_miqt_string): struct_miqt_string {.importc: "QJsonValue_toStringWithDefaultValue".}
proc fcQJsonValue_toArray(self: pointer, ): pointer {.importc: "QJsonValue_toArray".}
proc fcQJsonValue_toArrayWithDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QJsonValue_toArrayWithDefaultValue".}
proc fcQJsonValue_toObject(self: pointer, ): pointer {.importc: "QJsonValue_toObject".}
proc fcQJsonValue_toObjectWithDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QJsonValue_toObjectWithDefaultValue".}
proc fcQJsonValue_operatorSubscript(self: pointer, key: struct_miqt_string): pointer {.importc: "QJsonValue_operatorSubscript".}
proc fcQJsonValue_operatorSubscriptWithQsizetype(self: pointer, i: int64): pointer {.importc: "QJsonValue_operatorSubscriptWithQsizetype".}
proc fcQJsonValue_operatorEqual(self: pointer, other: pointer): bool {.importc: "QJsonValue_operatorEqual".}
proc fcQJsonValue_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QJsonValue_operatorNotEqual".}
proc fcQJsonValue_toBool1(self: pointer, defaultValue: bool): bool {.importc: "QJsonValue_toBool1".}
proc fcQJsonValue_toInt1(self: pointer, defaultValue: cint): cint {.importc: "QJsonValue_toInt1".}
proc fcQJsonValue_toInteger1(self: pointer, defaultValue: clonglong): clonglong {.importc: "QJsonValue_toInteger1".}
proc fcQJsonValue_toDouble1(self: pointer, defaultValue: float64): float64 {.importc: "QJsonValue_toDouble1".}
proc fcQJsonValue_delete(self: pointer) {.importc: "QJsonValue_delete".}
proc fcQJsonValueConstRef_new(param1: pointer): ptr cQJsonValueConstRef {.importc: "QJsonValueConstRef_new".}
proc fcQJsonValueConstRef_ToQJsonValue(self: pointer, ): pointer {.importc: "QJsonValueConstRef_ToQJsonValue".}
proc fcQJsonValueConstRef_toVariant(self: pointer, ): pointer {.importc: "QJsonValueConstRef_toVariant".}
proc fcQJsonValueConstRef_typeX(self: pointer, ): cint {.importc: "QJsonValueConstRef_type".}
proc fcQJsonValueConstRef_isNull(self: pointer, ): bool {.importc: "QJsonValueConstRef_isNull".}
proc fcQJsonValueConstRef_isBool(self: pointer, ): bool {.importc: "QJsonValueConstRef_isBool".}
proc fcQJsonValueConstRef_isDouble(self: pointer, ): bool {.importc: "QJsonValueConstRef_isDouble".}
proc fcQJsonValueConstRef_isString(self: pointer, ): bool {.importc: "QJsonValueConstRef_isString".}
proc fcQJsonValueConstRef_isArray(self: pointer, ): bool {.importc: "QJsonValueConstRef_isArray".}
proc fcQJsonValueConstRef_isObject(self: pointer, ): bool {.importc: "QJsonValueConstRef_isObject".}
proc fcQJsonValueConstRef_isUndefined(self: pointer, ): bool {.importc: "QJsonValueConstRef_isUndefined".}
proc fcQJsonValueConstRef_toBool(self: pointer, ): bool {.importc: "QJsonValueConstRef_toBool".}
proc fcQJsonValueConstRef_toInt(self: pointer, ): cint {.importc: "QJsonValueConstRef_toInt".}
proc fcQJsonValueConstRef_toInteger(self: pointer, ): clonglong {.importc: "QJsonValueConstRef_toInteger".}
proc fcQJsonValueConstRef_toDouble(self: pointer, ): float64 {.importc: "QJsonValueConstRef_toDouble".}
proc fcQJsonValueConstRef_toString(self: pointer, ): struct_miqt_string {.importc: "QJsonValueConstRef_toString".}
proc fcQJsonValueConstRef_toArray(self: pointer, ): pointer {.importc: "QJsonValueConstRef_toArray".}
proc fcQJsonValueConstRef_toObject(self: pointer, ): pointer {.importc: "QJsonValueConstRef_toObject".}
proc fcQJsonValueConstRef_operatorSubscriptWithQsizetype(self: pointer, i: int64): pointer {.importc: "QJsonValueConstRef_operatorSubscriptWithQsizetype".}
proc fcQJsonValueConstRef_operatorEqual(self: pointer, other: pointer): bool {.importc: "QJsonValueConstRef_operatorEqual".}
proc fcQJsonValueConstRef_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QJsonValueConstRef_operatorNotEqual".}
proc fcQJsonValueConstRef_toBool1(self: pointer, defaultValue: bool): bool {.importc: "QJsonValueConstRef_toBool1".}
proc fcQJsonValueConstRef_toInt1(self: pointer, defaultValue: cint): cint {.importc: "QJsonValueConstRef_toInt1".}
proc fcQJsonValueConstRef_toInteger1(self: pointer, defaultValue: clonglong): clonglong {.importc: "QJsonValueConstRef_toInteger1".}
proc fcQJsonValueConstRef_toDouble1(self: pointer, defaultValue: float64): float64 {.importc: "QJsonValueConstRef_toDouble1".}
proc fcQJsonValueConstRef_toString1(self: pointer, defaultValue: struct_miqt_string): struct_miqt_string {.importc: "QJsonValueConstRef_toString1".}
proc fcQJsonValueConstRef_delete(self: pointer) {.importc: "QJsonValueConstRef_delete".}
proc fcQJsonValueRef_new(param1: pointer): ptr cQJsonValueRef {.importc: "QJsonValueRef_new".}
proc fcQJsonValueRef_new2(array: pointer, idx: int64): ptr cQJsonValueRef {.importc: "QJsonValueRef_new2".}
proc fcQJsonValueRef_new3(objectVal: pointer, idx: int64): ptr cQJsonValueRef {.importc: "QJsonValueRef_new3".}
proc fcQJsonValueRef_operatorAssign(self: pointer, val: pointer): void {.importc: "QJsonValueRef_operatorAssign".}
proc fcQJsonValueRef_operatorAssignWithVal(self: pointer, val: pointer): void {.importc: "QJsonValueRef_operatorAssignWithVal".}
proc fcQJsonValueRef_ToQJsonValue(self: pointer, ): pointer {.importc: "QJsonValueRef_ToQJsonValue".}
proc fcQJsonValueRef_toVariant(self: pointer, ): pointer {.importc: "QJsonValueRef_toVariant".}
proc fcQJsonValueRef_typeX(self: pointer, ): cint {.importc: "QJsonValueRef_type".}
proc fcQJsonValueRef_isNull(self: pointer, ): bool {.importc: "QJsonValueRef_isNull".}
proc fcQJsonValueRef_isBool(self: pointer, ): bool {.importc: "QJsonValueRef_isBool".}
proc fcQJsonValueRef_isDouble(self: pointer, ): bool {.importc: "QJsonValueRef_isDouble".}
proc fcQJsonValueRef_isString(self: pointer, ): bool {.importc: "QJsonValueRef_isString".}
proc fcQJsonValueRef_isArray(self: pointer, ): bool {.importc: "QJsonValueRef_isArray".}
proc fcQJsonValueRef_isObject(self: pointer, ): bool {.importc: "QJsonValueRef_isObject".}
proc fcQJsonValueRef_isUndefined(self: pointer, ): bool {.importc: "QJsonValueRef_isUndefined".}
proc fcQJsonValueRef_toBool(self: pointer, ): bool {.importc: "QJsonValueRef_toBool".}
proc fcQJsonValueRef_toInt(self: pointer, ): cint {.importc: "QJsonValueRef_toInt".}
proc fcQJsonValueRef_toInteger(self: pointer, ): clonglong {.importc: "QJsonValueRef_toInteger".}
proc fcQJsonValueRef_toDouble(self: pointer, ): float64 {.importc: "QJsonValueRef_toDouble".}
proc fcQJsonValueRef_toString(self: pointer, ): struct_miqt_string {.importc: "QJsonValueRef_toString".}
proc fcQJsonValueRef_toArray(self: pointer, ): pointer {.importc: "QJsonValueRef_toArray".}
proc fcQJsonValueRef_toObject(self: pointer, ): pointer {.importc: "QJsonValueRef_toObject".}
proc fcQJsonValueRef_operatorSubscriptWithQsizetype(self: pointer, i: int64): pointer {.importc: "QJsonValueRef_operatorSubscriptWithQsizetype".}
proc fcQJsonValueRef_operatorEqual(self: pointer, other: pointer): bool {.importc: "QJsonValueRef_operatorEqual".}
proc fcQJsonValueRef_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QJsonValueRef_operatorNotEqual".}
proc fcQJsonValueRef_toBool1(self: pointer, defaultValue: bool): bool {.importc: "QJsonValueRef_toBool1".}
proc fcQJsonValueRef_toInt1(self: pointer, defaultValue: cint): cint {.importc: "QJsonValueRef_toInt1".}
proc fcQJsonValueRef_toInteger1(self: pointer, defaultValue: clonglong): clonglong {.importc: "QJsonValueRef_toInteger1".}
proc fcQJsonValueRef_toDouble1(self: pointer, defaultValue: float64): float64 {.importc: "QJsonValueRef_toDouble1".}
proc fcQJsonValueRef_toString1(self: pointer, defaultValue: struct_miqt_string): struct_miqt_string {.importc: "QJsonValueRef_toString1".}
proc fcQJsonValueRef_delete(self: pointer) {.importc: "QJsonValueRef_delete".}


func init*(T: type QJsonValue, h: ptr cQJsonValue): QJsonValue =
  T(h: h)
proc create*(T: type QJsonValue, ): QJsonValue =

  QJsonValue.init(fcQJsonValue_new())
proc create*(T: type QJsonValue, b: bool): QJsonValue =

  QJsonValue.init(fcQJsonValue_new2(b))
proc create*(T: type QJsonValue, n: float64): QJsonValue =
